--- a/Views/products.css
+++ b/Views/products.css
@@ -28,20 +28,13 @@
         height: 408px;
 
     }
-    .boxthuonghieu li{
-        list-style-type: none;
-    }
+    
     .boxtenthuonghieu{
         width: 111px;
         height: 30px;
         background-color: #EEEEEE;
     }
-    .boxthuonghieu a{
-        text-decoration: none;
-        color: black;
-        font-weight: 500;
-        font-size: 16px;
-    }
+    
     .checkbox-label {
     position: relative;
     display: inline-block;
@@ -50,6 +43,7 @@
     cursor: pointer;
     font-size: 15px;
     user-select: none;
+    margin-top: 9px;
 }
 
 .checkbox-label input[type="checkbox"] {
@@ -67,7 +61,7 @@
     height: 16px;
     width: 16px;
     background-color: #fff;
-    border: 1px solid #999;
+    border: -1px solid ;
     border-radius: 3px;
     box-shadow: inset 0 0 0 1px #000;
 }
