--- a/Views/products.css
+++ b/Views/products.css
@@ -43,7 +43,7 @@
     cursor: pointer;
     font-size: 15px;
     user-select: none;
-    margin-top: 9px;
+    margin-top: 7px;
 }
 
 .checkbox-label input[type="checkbox"] {
@@ -52,6 +52,9 @@
     cursor: pointer;
     height: 0;
     width: 0;
+}
+.containercheckboxdanhmuc{
+    margin-top: 8px;
 }
 
 .custom-checkmark {
