--- a/Views/css.css
+++ b/Views/css.css
@@ -47,11 +47,12 @@ header{
     background-color: white;
     margin-top: 0px;
     margin-top: -15px;
+    b
 
 }
 
 .vien{
-    background-color: #F8F8F8;
+    background-color: red;
 }
 nav{
     margin-top: 15px;
