--- a/Views/products.css
+++ b/Views/products.css
@@ -1,8 +1,6 @@
 .trangchudienthoai{
-        margin-top: 20px;
         width: 100%;
         background-color: #F8F8F8;
-        height: 50px;
         color: #555555;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 14px;
@@ -16,22 +14,19 @@
         margin-left: 40px;
     }
     .thuonghieu{
-        margin-top: 15px;
         font-size: 18px;
         font-weight: 700;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     .boxthuonghieu{
-        margin-top: 140px;
-        margin-left: 20px;  
-        width: 255px;
-        height: 408px;
-
+        padding: 20px;  
+        width: 210px;
+        border: 1px solid #F8F8F8;
     }
     
     .boxtenthuonghieu{
         width: 111px;
-        height: 30px;
+
         background-color: #EEEEEE;
     }
     
@@ -82,4 +77,52 @@
     color: white;
     font-weight: bold;
 }
+.containerlocsanpham{
+    padding: 20px;
+    width: 210px;
+    border: 1px solid #F8F8F8;
+}
+.containerlocsanpham h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.containerlocsanpham button{
+    background-color: #DFDFDF;
+    border: none;
+    border-radius: 2px;
+    padding: 7px;
+    margin-top: 8px;
 
+}
+.containerlocsanpham button:hover{
+    background-color: #BFBFBF;
+    cursor: pointer;
+}
+.containerlocsanpham input[type="number"] {
+    width: 80%;
+    padding: 5px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    height: 35px;
+}
+.containerlocsanpham button[type="submit"] {
+    width: 80%;
+    padding: 7px;
+    border: 1.5px solid black;
+    color: black;
+    background-color: white;
+    border-radius: 2px;
+}
+.cotbentrai{
+    width: 210px;
+    float: left;
+    margin-top: 20px;
+}
+.cotbenphai{
+    width: calc(100% - 210px);
+    margin-left: 300px;
+    
+    
+}
