--- a/Views/css.css
+++ b/Views/css.css
@@ -39,6 +39,7 @@ header{
     margin-left: -10px;
 }
 .container{
+    overflow: hidden;
     padding: 0;
     margin: 0;
     width: 93%;
@@ -47,7 +48,6 @@ header{
     background-color: white;
     margin-top: 0px;
     margin-top: -15px;
-    b
 
 }
 
