--- a/Views/products.css
+++ b/Views/products.css
@@ -1,6 +1,8 @@
 .trangchudienthoai{
+        margin-top: 20px;
         width: 100%;
         background-color: #F8F8F8;
+        height: 50px;
         color: #555555;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 14px;
@@ -21,12 +23,13 @@
     .boxthuonghieu{
         padding: 20px;  
         width: 210px;
+        height: 140px;
         border: 1px solid #F8F8F8;
     }
     
     .boxtenthuonghieu{
         width: 111px;
-
+        height: 30px;
         background-color: #EEEEEE;
     }
     
@@ -115,14 +118,44 @@
     background-color: white;
     border-radius: 2px;
 }
-.cotbentrai{
-    width: 210px;
-    float: left;
-    margin-top: 20px;
+.main-content {
+  display: flex;
+  align-items: flex-start; /* canh trên */
+  gap: 10px; /* khoảng cách giữa 2 cột */
+    clear: both;
+
 }
-.cotbenphai{
-    width: calc(100% - 210px);
-    margin-left: 300px;
-    
-    
+.cotbentrai {
+  width: 252    px;
 }
+.cotbenphai {
+  
+}
+.luachon {
+    margin-left: 20px;
+}
+
+.luachon a {
+    text-decoration: none;
+    margin-right: 10px;
+    display: inline-block;
+    padding: 15px;
+    font-size: 14px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    color: black;
+    cursor: pointer;
+    border-bottom: 3px solid transparent;
+    transition: all 0.2s ease;
+}
+
+.luachon a:hover {
+    color: #BD0000;
+    border-bottom: 3px solid #BD0000;
+}
+
+.luachon a.active {
+    color: #BD0000;
+    border-bottom: 3px solid #BD0000;
+}
+
