--- a/Views/products.css
+++ b/Views/products.css
@@ -235,7 +235,10 @@
     font-size: 14px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+.trangchudienthoai a{
+    color: #555555;
+    text-decoration: none;
+}
 .boxdathang a:hover {
     background-color: #900000;
 }
