--- a/Views/chitiet.css
+++ b/Views/chitiet.css
@@ -56,6 +56,7 @@
     display: flex;
     align-items: center;
     gap: 15px;
+    
 }
 
 .chitiet-old-price {
@@ -209,4 +210,9 @@ body, html {
     border-radius: 2px;
     z-index: 3;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+.giamoii {
+    font-size: 20px;
+    color: #BD0000;
+    font-weight: bold;
 }
